Fix background image not showing
path to image needed to be updated. Also nested it in
a directory "img" for organizational purposes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .backgroundcontainer{
-    background-image: url('../static/pressphoto-jln.jpeg');
+    background-image: url('/img/pressphoto-jln.jpeg');
     background-repeat: no-repeat;
     background-position: fixed;
     background-size: cover;
